tests/compile_fail/no_field_num.rs
use protowirers::*;

#[derive(Proto)]
struct Sample {
    #[def(def_type = "int32")]
    s: u32,
}

fn main() {}
