tests/compile_fail/no_field_num.stderr
error: invalid num of meta in #[def(...)]. got=1, expected=2
 --> $DIR/no_field_num.rs:6:5
  |
6 |     s: u32,
  |     ^
